<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTip</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title1">Benvenuto in iTip</string>
    <string name="istruction_00">Scorri verso sinistra per iniziare</string>
    <string name="istruction_10">Conto : </string>
    <string name="istruction_11">Scegli il valore della mancia o scrivilo tu :)</string>
    <string name="istruction_12">10 %</string>
    <string name="istruction_13">15 %</string>
    <string name="istruction_14">20 %</string>
    <string name="istruction_15">Valore Personalizzato</string>
    <string name="istruction_16">Scrivi per quante persone dividere</string>
    <string name="istruction_17">Numero Persone: </string>
    <string name="istruction_20">Totale : </string>
    <string name="istruction_21">Totale per persona : </string>

</resources>
